--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,35 +1,27 @@
-version: '3.8'
 
 services:
-  redis:
-    image: redis:7
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-
   receiver:
     build:
       context: .
       dockerfile: apps/receiver/Dockerfile
-    env_file:
-      - .env
+    image: trading-receiver:latest
+    restart: unless-stopped
+    environment:
+      - PYTHONUNBUFFERED=1
+      - REDIS_HOST=redis
+    volumes:
+      - trading-data:/data
     depends_on:
       - redis
 
-  # Similar for other services
+  redis:
+    image: redis:7-alpine
+    restart: always
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis-data:/data
 
 volumes:
-  redis_data:
-  sqlite_data:
-
-  services:
-  receiver:
-    volumes:
-      - ./shared/config/exchanges:/app/shared/config/exchanges:ro
-      - ./shared/config/overrides:/app/shared/config/overrides:ro
-
-  distributor:
-    volumes:
-      - ./shared/config/exchanges:/app/shared/config/exchanges:ro
-      - ./shared/config/overrides:/app/shared/config/overrides:ro
+  trading-data:
+  redis-data:
