--- a/apps/receiver/Dockerfile
+++ b/apps/receiver/Dockerfile
@@ -1,13 +1,10 @@
-# Use optimized Python image with UV
-FROM python:3.13-slim as base
+# Use optimized Python image
+FROM python:3.13-slim
 
 # Install system dependencies
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends libssl3 && \
+    apt-get install -y --no-install-recommends gcc libssl3 && \
     rm -rf /var/lib/apt/lists/*
-
-# Install UV for faster package installation
-RUN pip install --no-cache-dir uv
 
 # Set up application environment
 WORKDIR /app
@@ -20,12 +17,8 @@ COPY pyproject.toml .
 COPY shared/ ./shared/
 COPY apps/receiver/ ./apps/receiver/
 
-# Create and activate virtual environment
-RUN uv venv .venv
-ENV PATH="/app/.venv/bin:$PATH"
-
-# Install dependencies
-RUN uv pip install --no-cache-dir -e .
+# Install dependencies using standard pip
+RUN pip install --no-cache-dir -e .
 
 # Create data volume
 RUN mkdir -p ${DATA_DIR} && chmod 777 ${DATA_DIR}
