--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   redis:
@@ -6,6 +5,8 @@ services:
     ports:
       - "6379:6379"
     command: redis-server --save 60 1 --loglevel warning
+    volumes:
+      - redis-data:/data
 
   receiver:
     build:
@@ -16,3 +17,9 @@ services:
     depends_on:
       - redis
     restart: unless-stopped
+    volumes:
+      - ./shared:/app/shared
+      - ./receiver:/app/receiver
+
+volumes:
+  redis-data:
