--- a/receiver/pyproject.toml
+++ b/receiver/pyproject.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 dependencies = [
     "websockets>=12.0",
     "aioredis>=2.0.0",
+    "oci",
     "tomli>=2.0.1",
     "python-dotenv>=1.0.0",
     "uvloop>=0.19.0"
