--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 # ./docker-compose.yml
+version: '3.9'
 
 services:
   redis:
@@ -6,18 +7,11 @@ services:
     command: redis-server --save 60 1 --loglevel warning
     volumes:
       - redis-data:/data
-    networks:
-      - trading-network
-
-  postgres:
-    image: postgres:15-alpine
-    environment:
-      POSTGRES_USER: trader
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: trading
-    volumes:
-      - pg-data:/var/lib/postgresql/data
-      - ./scripts/init_db.sh:/docker-entrypoint-initdb.d/init_db.sh
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
       - trading-network
 
@@ -27,81 +21,18 @@ services:
       dockerfile: receiver/Dockerfile
     restart: unless-stopped
     volumes:
-      - ./config:/app/config:ro
-      - ./shared:/app/shared:ro
-    environment:
-      REDIS_URL: redis://redis:6379
-      POSTGRES_URL: postgresql://trader:${DB_PASSWORD}@postgres:5432/trading
-    depends_on:
-      - redis
-      - postgres
-    networks:
-      - trading-network
-
-  distributor:
-    build:
-      context: .
-      dockerfile: distributor/Dockerfile
-    restart: unless-stopped
-    volumes:
-      - ./config:/app/config:ro
-      - ./shared:/app/shared:ro
+      - ./configuration:/app/configuration:ro
+      - ./restful_api:/app/restful_api:ro
     environment:
       REDIS_URL: redis://redis:6379
     depends_on:
-      - redis
-    networks:
-      - trading-network
-
-  processor:
-    build:
-      context: .
-      dockerfile: processor/Dockerfile
-    restart: unless-stopped
-    volumes:
-      - ./config:/app/config:ro
-      - ./shared:/app/shared:ro
-      - processor-data:/data
-    environment:
-      REDIS_URL: redis://redis:6379
-      POSTGRES_URL: postgresql://trader:${DB_PASSWORD}@postgres:5432/trading
-    depends_on:
-      - redis
-      - postgres
-    networks:
-      - trading-network
-
-  communicator:
-    build:
-      context: .
-      dockerfile: communicator/Dockerfile
-    restart: unless-stopped
-    volumes:
-      - ./config:/app/config:ro
-      - ./shared:/app/shared:ro
-    environment:
-      TELEGRAM_BOT_TOKEN: ${TELEGRAM_BOT_TOKEN}
-    networks:
-      - trading-network
-
-  maintenance:
-    build:
-      context: .
-      dockerfile: maintenance/Dockerfile
-    restart: unless-stopped
-    volumes:
-      - ./config:/app/config:ro
-      - ./shared:/app/shared:ro
-      - processor-data:/data:ro
-    environment:
-      BACKBLAZE_CONFIG: ${BACKBLAZE_CONFIG}
+      redis:
+        condition: service_healthy
     networks:
       - trading-network
 
 volumes:
   redis-data:
-  pg-data:
-  processor-data:
 
 networks:
   trading-network:
