--- a/receiver/pyproject.toml
+++ b/receiver/pyproject.toml
@@ -1,16 +1,6 @@
-[project]
-name = "receiver"
-version = "0.1.0"
-
+[tool.uv]
 dependencies = [
-    "websockets>=12.0",
-    "aioredis>=2.0.0",
-    "oci",
-    "tomli>=2.0.1",
-    "python-dotenv>=1.0.0",
-    "uvloop>=0.19.0"
+    "websockets",
+    "aioredis",
+    "aiohttp"
 ]
-
-[build-system]
-requires = ["uv"]
-build-backend = "uv"
