--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,9 @@ services:
       dockerfile: receiver/Dockerfile
     restart: unless-stopped
     volumes:
-      - ./configuration:/app/configuration:ro
-      - ./restful_api:/app/restful_api:ro
-      - ./shared:/app/shared:ro
+      - ./configuration:trading_app/app/configuration:ro
+      - ./restful_api:trading_app/app/restful_api:ro
+      - ./shared:trading_app/app/shared:ro
     environment:
       REDIS_URL: redis://redis:6379
     depends_on:
