--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   receiver:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: src/receiver/deribit/Dockerfile
     volumes:
       - ./config:/app/config:ro
       - ./data:/app/data
@@ -14,3 +14,18 @@ services:
         condition: service_healthy
     ports:
       - "8000:8000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
+
+      
+volumes:
+  redis-data:
+  trading-data:
+
+networks:
+  trading-network:
+    driver: bridge
