--- a/config/config_strategies.toml
+++ b/config/config_strategies.toml
@@ -1,3 +1,18 @@
+[ws]
+# Base delay before attempting to reconnect (seconds)
+reconnect_base_delay = 5
+
+# Maximum delay between reconnect attempts (seconds)
+max_reconnect_delay = 300
+
+# Threshold for detecting exchange maintenance (seconds)
+maintenance_threshold = 900
+
+# Interval for heartbeat checks (seconds)
+heartbeat_interval = 30
+
+# Timeout for WebSocket connections (seconds)
+websocket_timeout = 900
 
 [[tradable]]
 spot = [
