--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,14 @@
+# docker-compose.yml - Add redis service definition
 services:
-  receiver:
-    build:
-      context: .
-      dockerfile: src/receiver/deribit/Dockerfile
-    volumes:
-      - ./config:/app/config:ro
-      - ./data:/app/data
-    environment:
-      REDIS_URL: redis://redis:6379
-      DB_TYPE: ${DB_TYPE:-sqlite}
-    depends_on:
-      redis:
-        condition: service_healthy
-    ports:
-      - "8000:8000"
+  redis:
+    image: redis:7-alpine
+    container_name: redis
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
       timeout: 5s
-      retries: 10
-      start_period: 30s
-
-      
-volumes:
-  redis-data:
-  trading-data:
-
-networks:
-  trading-network:
-    driver: bridge
+      retries: 5
+    volumes:
+      - redis-data:/data
+    networks:
+      - trading-network
