--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml - Add redis service definition
 services:
   redis:
     image: redis:7-alpine
@@ -12,3 +11,35 @@ services:
       - redis-data:/data
     networks:
       - trading-network
+
+  receiver:
+    build:
+      context: .
+      dockerfile: src/receiver/deribit/Dockerfile
+    volumes:
+      - ./config:/app/config:ro
+      - ./data:/app/data
+    environment:
+      REDIS_URL: redis://redis:6379
+      DB_TYPE: ${DB_TYPE:-sqlite}
+    depends_on:
+      redis:
+        condition: service_healthy
+    ports:
+      - "8000:8000"
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 10
+      start_period: 30s
+    networks:
+      - trading-network
+
+volumes:
+  redis-data:
+  trading-data:
+
+networks:
+  trading-network:
+    driver: bridge
