--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     environment:
       REDIS_URL: redis://redis:6379
       DB_TYPE: ${DB_TYPE:-sqlite}
+      CONFIG_DIR: /app/config
     depends_on:
       redis:
         condition: service_healthy
