--- a/config/security.toml
+++ b/config/security.toml
@@ -1,17 +1,16 @@
-# config/security.toml
 [blocked_scanners]
 list = [
     "censysinspect",
     "nmap",
     "nessus",
-    "acunetix",
-    "sqlmap"
+    "acunetix"
 ]
 
 [rate_limiting]
 global = 10
-per_ip = 5
 
 [headers]
 X-Content-Type-Options = "nosniff"
 X-Frame-Options = "DENY"
+Content-Security-Policy = "default-src 'self'"
+Strict-Transport-Security = "max-age=63072000; includeSubDomains"
