--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,11 @@ services:
       - ./config:/app/config:ro
       - ./data:/app/data
     environment:
-      REDIS_URL: redis://redis:6379
-      DB_TYPE: ${DB_TYPE:-sqlite}
       CONFIG_DIR: /app/config
+      DB_BASE_PATH: /app/data
+      DERIBIT_CLIENT_ID: ${DERIBIT_CLIENT_ID}
+      DERIBIT_CLIENT_SECRET: ${DERIBIT_CLIENT_SECRET}
+      STATUS_API_KEY: ${STATUS_API_KEY}
     depends_on:
       redis:
         condition: service_healthy
