--- a/src/receiver/pyproject.toml
+++ b/src/receiver/pyproject.toml
@@ -1,6 +1,8 @@
-[tool.uv]
+[project]
+name = "receiver"
+version = "1.0.0"
 dependencies = [
-    "websockets",
-    "dataclassy",
-    "aiohttp"
+    "websockets>=12.0",
+    "oci>=2.125",
+    "uvloop>=0.19"
 ]
