--- a/src/receiver/deribit/Dockerfile
+++ b/src/receiver/deribit/Dockerfile
@@ -35,16 +35,10 @@ RUN . /opt/venv/bin/activate && \
 
 # Stage 3: Final production image
 FROM base AS production
+COPY --from=dependencies /opt/venv /opt/venv
+COPY --from=dependencies /app /app
 
-# Create non-root user
-RUN groupadd -r appuser && \
-    useradd --no-log-init -r -g appuser -d /app -s /bin/false appuser && \
-    mkdir -p /app/data && \
-    chown appuser:appuser /app/data
-
-# Copy from dependencies stage
-COPY --from=dependencies --chown=appuser:appuser /opt/venv /opt/venv
-COPY --from=dependencies --chown=appuser:appuser /app /app
+# Environment configuration
 
 # Environment configuration
 ENV PYTHONUNBUFFERED=1 \
@@ -60,10 +54,6 @@ ENV PYTHONUNBUFFERED=1 \
 HEALTHCHECK --interval=30s --timeout=3s \
     CMD python -c "import sqlite3; conn = sqlite3.connect('/app/data/status.db'); conn.close()" || exit 1
 
-    
-# Set working directory and switch to non-root user
-WORKDIR /app
-USER appuser
-
 # Execute application
+WORKDIR /app
 ENTRYPOINT ["python", "-m", "receiver.deribit.main"]
