--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+#version: '3.9' dont add this line, it is not needed in the latest versions of Docker Compose
+
 services:
   redis:
     image: redis:7-alpine
@@ -27,14 +29,6 @@ services:
     depends_on:
       redis:
         condition: service_healthy
-    ports:
-      - "127.0.0.1:8000:8000"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
-      interval: 30s
-      timeout: 5s
-      retries: 10
-      start_period: 30s
     networks:
       - trading-network
 
