--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-#version: '3.9' dont add this line, it is not needed in the latest versions of Docker Compose
-
 services:
   redis:
     image: redis:7-alpine
@@ -21,16 +19,21 @@ services:
     env_file:
       - config/.env
     environment:
-      - REDIS_URL=redis://redis:6379
       - DB_BASE_PATH=/app/data
     volumes:
       - ./config:/app/config:ro
-      - ./data:/app/data
+      - ./data:/app/data:rw  # Single volume mapping
     depends_on:
       redis:
         condition: service_healthy
     networks:
       - trading-network
+    deploy:
+      resources:
+        limits:
+          memory: 512M
+          cpus: '1.0'
+    user: "1001:1001"  # Match UID/GID from Dockerfile
 
 volumes:
   redis-data:
