--- a/src/receiver/deribit/Dockerfile
+++ b/src/receiver/deribit/Dockerfile
@@ -37,8 +37,8 @@ COPY ./config /app/config
 
 # Install application-specific dependencies
 RUN . /opt/venv/bin/activate && \
-    uv pip install --no-cache /app/src/receiver
-
+    uv pip install --no-cache /app/src/receiver/pyproject.toml
+    
 # Stage 3: Final production image
 FROM base AS production
 
