--- a/src/receiver/deribit/Dockerfile
+++ b/src/receiver/deribit/Dockerfile
@@ -1,3 +1,44 @@
+# Stage 1: Base image with Python 3.13
+FROM python:3.13-slim AS base
+
+# Install system dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    libsqlite3-dev \
+    sqlite3 \
+    libssl-dev \
+    libsnappy-dev \
+    libz-dev \
+    curl && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
+# Install UV and create virtual environment
+RUN pip install --no-cache-dir uv==0.1.0 && \
+    uv venv /opt/venv
+
+ENV PATH="/opt/venv/bin:$PATH"
+
+# Stage 2: Install dependencies
+FROM base AS dependencies
+WORKDIR /app
+
+# Copy dependency specifications first for better caching
+COPY ./src/shared/requirements.txt /app/src/shared/
+COPY ./src/receiver/pyproject.toml /app/src/receiver/
+
+# Install base dependencies
+RUN . /opt/venv/bin/activate && \
+    uv pip install --no-cache -r /app/src/shared/requirements.txt
+
+# Copy application code
+COPY ./src /app/src
+COPY ./config /app/config
+
+# Install application from source directory
+RUN . /opt/venv/bin/activate && \
+    uv pip install --no-cache -e /app/src/receiver
+
 # Stage 3: Final production image
 FROM base AS production
 
